Remove usages of List.of (#158)